--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,13 @@
-name: Deploy to staging Environment
+name: Deploy to production Environment
 
 on:
-  push:
-    branches: [staging]
+  pull_request:
+    types: [closed] 
+    branches: [main]
 
 jobs:
   build_docker_image:
+    if: github.event.pull_request.merged == true
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
 
@@ -19,10 +21,10 @@ jobs:
       - name: edit .env file
         env:
           PORT: ${{ secrets.PORT }}
-          HOST: ${{ secrets.HOST }}
+          HOST: ${{ secrets.HOST_PROD }}
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
-          REDIS_URL: ${{ secrets.REDIS_URL }}
-          KAFKA_BROKER: ${{ secrets.KAFKA_BROKER }}
+          REDIS_URL: ${{ secrets.REDIS_URL_PROD }}
+          KAFKA_BROKER: ${{ secrets.KAFKA_BROKER_PROD }}
           KAFKA_CLIENT_ID: ${{ secrets.KAFKA_CLIENT_ID }}
           KAFKA_TOPIC_LOGOUT: ${{ secrets.KAFKA_TOPIC_LOGOUT }}
           KAFKA_TOPIC_LOGIN: ${{ secrets.KAFKA_TOPIC_LOGIN }}
@@ -55,14 +57,14 @@ jobs:
         with:
           images: byvoxel/auth-logout
           tags: |
-            type=raw,value=staging
+            type=raw,value=production
           
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
-          tags: byvoxel/auth-logout:staging
+          tags: byvoxel/auth-logout:production
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -73,7 +75,7 @@ jobs:
     strategy:
       matrix:
         ec2_instance: 
-          - ec2-18-214-162-122.compute-1.amazonaws.com
+          - ec2-98-81-110-187.compute-1.amazonaws.com
 
     steps:
       - name: Deploy Container
@@ -81,18 +83,18 @@ jobs:
         with:
           host: ${{ matrix.ec2_instance }}
           username: ec2-user
-          key: ${{ secrets.EC2_SSH_KEY }}
+          key: ${{ secrets.EC2_SSH_KEY_PROD1 }}
           port: 22
           timeout: "120s"
           script: |
             set -e
-            echo "Deploying image: byvoxel/auth-logout:staging"
+            echo "Deploying image: byvoxel/auth-logout:production"
             sudo docker stop auth-logout || true
             sudo docker rm auth-logout || true
-            sudo docker pull byvoxel/auth-logout:staging
+            sudo docker pull byvoxel/auth-logout:production
             sudo docker run -d \
               --name auth-logout \
               -p 3011:3011 \
               --restart unless-stopped \
-              byvoxel/auth-logout:staging
+              byvoxel/auth-logout:production
             sudo docker system prune -af --volumes || true
