--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -75,7 +75,7 @@ jobs:
     strategy:
       matrix:
         ec2_instance: 
-          - ec2-98-81-110-187.compute-1.amazonaws.com
+          - ec2-54-87-27-30.compute-1.amazonaws.com
 
     steps:
       - name: Deploy Container
@@ -83,7 +83,7 @@ jobs:
         with:
           host: ${{ matrix.ec2_instance }}
           username: ec2-user
-          key: ${{ secrets.EC2_SSH_KEY_PROD1 }}
+          key: ${{ secrets.EC2_SSH_KEY_MIXED }}
           port: 22
           timeout: "120s"
           script: |
